--- a/app/views/shared/_video_fields.html.erb
+++ b/app/views/shared/_video_fields.html.erb
@@ -1,4 +1,4 @@
-<div class='nested-fields'>
+<div class="nested-fields">
     <%= f.input :name, label: "Name"  %>
     <%= f.label :url %>
     <%= f.url_field :url %><br />
