--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -10,8 +10,11 @@
   </div>
   <div style="display: flex; flex-direction: row;">
     <p style="margin-right: 1%"; margin-left: 1%"><link rel="stylesheet" href="">Invite</p>
-    <p style="margin-right: 1%"><link rel="stylesheet" href="">Edit</p>
-    <p style="margin-right: 1%"><link rel="stylesheet" href="">Delete</p>
+    <p style="margin-right: 1%"><%= link_to "Edit", edit_course_path(course) %></p>
+    <p style="margin-right: 1%"><%= link_to "Delete", course_path(course),
+      method: :delete,
+      data: { confirm: "Are you sure?" } %></p>
+
   </div>
 </div>
 <% end %>
