--- a/app/views/shared/_form_courses.html.erb
+++ b/app/views/shared/_form_courses.html.erb
@@ -16,6 +16,7 @@
           </div>
           <div class= "form-actions">
             <%= f.button :submit , class: "btn-form" %>
+            <%= link_to "Back", courses_path %>
           </div>
         </div>
       </div>
