--- a/app/views/invite_mailer/new_user_invite.html.erb
+++ b/app/views/invite_mailer/new_user_invite.html.erb
@@ -1,5 +1,6 @@
 <p>Hi <%= @invitation.email %></p>
 
 <p>http://localhost:3000/users/sign_up?invitation_token=<%=@invitation.token%></p>
+<p>@path</p>
 
 <p>See ya!</p>
