--- a/app/views/shared/_student_index.html.erb
+++ b/app/views/shared/_student_index.html.erb
@@ -1,4 +1,6 @@
 <% @courses.each do |invite| %>
+  <% if @courses.all_by_course(invite.course_id) > 1 %>
+    <%  %>
 <div>
   <h1><%= invite.course.name %></h1>
   <p><%= invite.course.description %></p>
