--- a/app/views/shared/_student_index.html.erb
+++ b/app/views/shared/_student_index.html.erb
@@ -1,8 +1,7 @@
 <% @courses.each do |invite| %>
-  <% if @courses.all_by_course(invite.course_id) > 1 %>
-    <%  %>
 <div>
   <h1><%= invite.course.name %></h1>
   <p><%= invite.course.description %></p>
 </div>
+<div><p style="margin-right: 1%"; margin-left: 1%"><%= link_to "Start", course_path(invite.course.id) %></p></div>
 <% end %>
