--- a/app/views/shared/_publisher_index.html.erb
+++ b/app/views/shared/_publisher_index.html.erb
@@ -1,3 +1,6 @@
+<div>
+  <p style="margin-right: 1%"; margin-left: 1%"><%= link_to "Add new Course", new_course_path%></p>
+</div>
 <% @courses.each do |course| %>
 <div>
   <h1><%= course.name %></h1>
